# universe.too.foo

./: .gitignore  ARCHITECTURE.md  Cargo.toml  IMPLEMENTATION_STATUS.md  IMPLEMENTATION_SUMMARY.md  README.md  SESSION_SUMMARY.md  TESTING_GUIDE.md  TRAINING.md  _feasibility_report.txt  compile_belt.py  data_compiler.py  deploy.sh  real_data_compiler.py  run.sh  train_asteroid.py  train_real_shape.py  universe-whitepaper.md  wasm-build.sh
client/: README.md  index.html  package-lock.json  package.json  vite.config.ts
client/public/: sw.js
client/public/papers/: demos.html  docs.html  index.html  paper.html  universe-whitepaper.tex
client/public/papers/css/: demos.css  paper.css
client/public/papers/data/: training_metrics.json
client/public/papers/js/: gaussian_viz.js  hlg_viz.js  training_viz.js
client/public/universe/: cells.pack.json  index.json  landmarks.json
client/src/: camera.test.ts  camera.ts  client.ts  dataset.ts  flight_controls.ts  hud.ts  input.ts  label_renderer.ts  landmarks.ts  main.ts  math.test.ts  minimap_renderer.ts  procedural_oort.ts  runtime.ts  scale_system.ts  stellar_motion.ts  time_controller.ts  webgl_splats.ts  webgpu_splats.ts
client/src/shaders/: milkyway.wgsl  minimap_compute.wgsl  minimap_render.wgsl  splat.wgsl
cloudflare/: config.yml  setup.sh
crates/universe-cli/: Cargo.toml
crates/universe-cli/src/: main.rs
crates/universe-core/: Cargo.toml
crates/universe-core/src/: chebyshev.rs  constants.rs  coordinates.rs  grid.rs  lib.rs  tests.rs
crates/universe-data/: Cargo.toml
crates/universe-data/src/: arithmetic_coder.rs  canonical.rs  cell.rs  compression.rs  crossmatch.rs  ephemeris.rs  landmarks.rs  lib.rs  manifest.rs  ml_compression.rs  ml_shards.rs  pipeline.rs  spacecraft.rs  splat.rs  stars.rs
crates/universe-engine/: Cargo.toml
crates/universe-engine/src/: camera.rs  http_adapter.rs  lib.rs  loader.rs  renderer.rs  streaming.rs  structs.rs  wasm.rs
crates/universe-engine/src/assets/: loader.rs  structs.rs
crates/universe-raster/: Cargo.toml
crates/universe-raster/src/: covariance.rs  gpu_types.rs  lib.rs
crates/universe-raster/src/shaders/: project.wgsl  raster_tile.wgsl  sort.wgsl  tile_assign.wgsl  tile_ranges.wgsl
crates/universe-render/: Cargo.toml
crates/universe-render/src/: camera.rs  gpu_types.rs  lib.rs  pipeline.rs  renderer.rs  streaming.rs  tile_pipeline.rs  window.rs
crates/universe-render/src/shaders/: blit.wgsl  shader.wgsl  splat.wgsl
crates/universe-sim/: Cargo.toml
crates/universe-sim/src/: elements.rs  lib.rs  planets.rs  system.rs  time_controller.rs  validation.rs
crates/universe-stream/: Cargo.toml
crates/universe-stream/src/: capture.rs  encoder.rs  error.rs  headless.rs  input.rs  lib.rs  peer.rs  rtp.rs  server.rs  signaling.rs  streaming.rs
crates/universe-train/: Cargo.toml
crates/universe-train/src/: camera.rs  entropy_model.rs  entropy_trainer.rs  ground_truth.rs  lib.rs  loss.rs  model.rs  rasterizer.rs  trainer.rs
crates/universe-train/src/torch_backend/: loss.rs  mod.rs  model.rs  rasterizer.rs  trainer.rs
data/: deep_sky_objects.json  gaia_poc.csv
scripts/: audit_cells_planarity.mjs  build_deep_sky.py  build_universe.sh  download_gaia.sh  generate_training_report.py  setup_cuda_training.sh  test_landmarks.sh  train_gaia.sh  train_gaia_fast.sh  train_validation.sh  validate_training.sh
src/: camera.rs  geometry.rs  main.rs
src/assets/: loader.rs  shader.wgsl  structs.rs
training2/: cells.pack.json  index.json
web/: index.html
web/css/: style.css
