[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.dependencies]
# Existing from Phase 0
nalgebra = "0.33"
glam = "0.29"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
lz4_flex = "0.11"
bytemuck = { version = "1.18", features = ["derive"] }
thiserror = "2.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
clap = { version = "4.5", features = ["derive"] }

# NEW for Phase 1
anise = "0.8"              # Pure Rust ephemeris (SPICE replacement)
hifitime = "4.2"           # High-precision time
fitsrs = "0.4"             # Pure Rust FITS parser
reqwest = { version = "0.12", features = ["blocking", "stream"] }
tokio = { version = "1.0", features = ["full"] }
rayon = "1.10"             # Parallel processing
indicatif = "0.17"         # Progress bars
csv = "1.3"                # CSV parsing for catalog data
flate2 = "1.0"             # Gzip decompression
futures-util = "0.3"       # Async stream utilities
num_cpus = "1.16"          # CPU count detection
