[package]
name = "universe-stream"
version = "0.1.0"
edition = "2021"

[dependencies]
universe-core = { path = "../universe-core" }
universe-data = { path = "../universe-data" }
universe-sim = { path = "../universe-sim" }
universe-render = { path = "../universe-render" }

# Async runtime
tokio = { workspace = true }
futures = "0.3"

# HTTP/WebSocket server
axum = { version = "0.7", features = ["ws"] }
tower-http = { version = "0.6", features = ["cors", "fs"] }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Graphics
wgpu = "23"
bytemuck = { workspace = true }
image = "0.25"  # For JPEG encoding
glam = { workspace = true }

# Utilities
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
parking_lot = "0.12"
base64 = "0.22"
